# bootcamp_ai_enabled_python_web_development

./: .gitignore  README.md
assignment_materials/05.FastAPI_agantStreaming/: README.md  index.html  pyproject.toml
assignment_materials/05.FastAPI_agantStreaming/alembic/: env.py
assignment_materials/05.FastAPI_agantStreaming/alembic/versions/: 8db4b21004e6_test.py
assignment_materials/05.FastAPI_agantStreaming/app/: main.py
assignment_materials/05.FastAPI_agantStreaming/app/core/: settings.py
assignment_materials/05.FastAPI_agantStreaming/app/models/: engine.py
assignment_materials/05.FastAPI_agantStreaming/app/modules/agents/: models.py  prompt.py  tools.py
assignment_materials/05.FastAPI_agantStreaming/app/modules/chats/: router.py
assignment_materials/05.FastAPI_agantStreaming/app/modules/sessions/: router.py
assignment_materials/06.RAG_fastAPI_MCP/: README.md  mcp_rag.py  pyproject.toml
assignment_materials/06.RAG_fastAPI_MCP/app/: main.py
assignment_materials/06.RAG_fastAPI_MCP/app/core/: rag_engine.py  settings.py
assignment_materials/06.RAG_fastAPI_MCP/app/modules/documents/: router.py  schema.py
assignment_materials/06.RAG_fastAPI_MCP/app/modules/search/: router.py  schema.py
materials_lesson/: README.md
materials_lesson/04.fastapi_app/: Makefile  README.md  logic_return_date.py  pyproject.toml
materials_lesson/04.fastapi_app/alembic/: env.py
materials_lesson/04.fastapi_app/alembic/versions/: 70e7931e615f_init_db.py
materials_lesson/04.fastapi_app/app/: main.py
materials_lesson/04.fastapi_app/app/models/: database.py  engine.py
materials_lesson/04.fastapi_app/app/router/: books_router.py
materials_lesson/04.fastapi_app/app/schema/: book_schema.py
materials_lesson/04.fastapi_app/script/: seeder.py
(+73 files in other folders)
