[project]
name = "06-rag-fastapi-mcp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "python-dotenv>=1.2.2",
    "scalar-fastapi>=1.8.2",
    "mistralai>=1.0.0",
    "chonkie[all,openai,semantic]>=1.6.2",
    "openai>=2.31.0",
    "chromadb>=1.5.7",
    "httpx>=0.28.1",
    "tiktoken>=0.12.0",
    "mcp[cli]>=1.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E" ,"F","W","I"]
